--- a/_includes/post-list-item.html
+++ b/_includes/post-list-item.html
@@ -1,16 +1,22 @@
 <li class="post-list-item">
-	<span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
 
 	<header>
-		<h2>
-			<a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-		</h2>
+		<h2><a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h2>
+
+		<div class="post-meta">
+
+			<div class="post-date">
+				<i class="fa fa-clock-o"></i>
+				{{ post.date | date: "%b %-d, %Y" }}
+			</div>
+
+			{% include post-categories.html categories=post.categories %}
+		</div>
 	</header>
 
 	<div class="excerpt">{{ post.excerpt }}</div>
 
 	<footer class="post-footer">
-	    {% include post-categories.html categories=post.categories %}
 	</footer>
 
 </li>
