--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -1,5 +1,5 @@
 <ul class="post-list">
-  {% for post in posts %}
+  {% for post in include.posts %}
     {% include post-list-item.html post=post %}
   {% endfor %}
 </ul>
