--- a/css/main.scss
+++ b/css/main.scss
@@ -41,5 +41,6 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting",
         "font-awesome",
+        "pages",
         "posts"
 ;
