--- a/css/main.scss
+++ b/css/main.scss
@@ -11,13 +11,14 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
+$grey-color:       #828282;
+$grey-color-light: #e6e6e6;
+$grey-color-dark:  #1a1a1a;
+
+$text-color:       $grey-color-dark;
+$text-color-light: $grey-color-light;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
-
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
 
 $on-palm:          600px;
 $on-laptop:        800px;
