--- a/_sass/_pages.scss
+++ b/_sass/_pages.scss
@@ -1,2 +1,23 @@
 @import "pages/about",
         "pages/home";
+
+
+.page-title {
+    font-size: 42px;
+    letter-spacing: -1px;
+    line-height: 1;
+
+    @include media-query($on-laptop) {
+        font-size: 36px;
+    }
+}
+
+.page-sub-title {
+    font-size: 1.4rem;
+    letter-spacing: -1px;
+    line-height: 1;
+
+    @include media-query($on-laptop) {
+        font-size: 36px;
+    }
+}
