--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,7 @@
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+
+    <script src="//use.typekit.net/spn1cew.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
 </head>
