--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -13,11 +13,13 @@
 }
 
 .site-title {
-    font-size: 26px;
-    line-height: 56px;
-    letter-spacing: -1px;
-    margin-bottom: 0;
     float: left;
+    margin-bottom: 0;
+    line-height: 56px;
+
+    font-size: 26px;
+    font-weight: 600;
+    letter-spacing: -1px;
 
     &,
     &:visited {
