--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -61,7 +61,7 @@
 
 .post-link {
     display: block;
-    font-size: 24px;
+    font-size: 1.2rem;
 }
 
 /**
@@ -72,7 +72,7 @@
 }
 
 .post-title {
-    font-size: 42px;
+    font-size: 2rem;
     letter-spacing: -1px;
     line-height: 1;
 
