--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -1,43 +1,60 @@
 /**
  * Site header
  */
+
+$nav-height: 4rem;
+
 .site-header {
     // Positioning context for the mobile navigation icon
     position: relative;
-    min-height: 56px;
+    min-height: $nav-height;
+    line-height: $nav-height;
     margin-bottom: $spacing-unit;
 
     background: lighten($grey-color-dark, 12%);
     border-bottom: 1px solid $grey-color-dark;
     box-shadow: 0 1px 3px rgba($grey-color-dark, 0.4);
+
+    .wrapper {
+        position: relative;
+    }
 }
 
 .site-title {
     float: left;
     margin-bottom: 0;
-    line-height: 56px;
 
-    font-size: 26px;
+    font-size: 2rem;
     font-weight: 600;
     letter-spacing: -1px;
+
+    transition: color 0.3s;
 
     &,
     &:visited {
         color: $grey-color-light;
     }
+
+    &:hover {
+        color: white;
+        text-decoration: none;
+    }
 }
 
 .site-nav {
     float: right;
-    line-height: 56px;
+    line-height: $nav-height;
 
     .menu-icon {
         display: none;
+        color: $grey-color-dark;
     }
 
     .page-link {
+        display: inline-block;
+        padding: 0 1rem;
         color: $text-color-light;
-        line-height: $base-line-height;
+        line-height: $nav-height;
 
         // Gaps between nav items, but not on the first one
         &:not(:first-child) {
@@ -48,7 +65,7 @@
     @include media-query($on-palm) {
         position: absolute;
         top: 9px;
-        right: 30px;
+        right: $spacing-unit / 2;
         background-color: $background-color;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
@@ -62,15 +79,6 @@
             line-height: 0;
             padding-top: 10px;
             text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
-            }
         }
 
         .trigger {
@@ -86,6 +94,7 @@
         .page-link {
             display: block;
             padding: 5px 10px;
+            color: $grey-color-dark;
         }
     }
 }
